--- a/index.html
+++ b/index.html
@@ -103,6 +103,23 @@
             <li><a href="https://www.linkedin.com/in/username">LinkedIn</a></li>
             <li><a href="https://www.github.com/username">GitHub</a></li>
         </ul>
+
+        <h3>Visitor Count: <span id="visitorCount">Loading...</span></h3>
+
+<script>
+    async function fetchVisitorCount() {
+        try {
+            const response = await fetch('YOUR_API_URL/visitorcount');
+            const data = await response.json();
+            document.getElementById('visitorCount').textContent = data.visitorCount;
+        } catch (error) {
+            console.error('Error fetching visitor count:', error);
+        }
+    }
+
+    // Fetch visitor count when page loads
+    fetchVisitorCount();
+</script>
     </footer>
 </body>
 </html>
