--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     async function fetchVisitorCount() {
         console.log("Starting fetch for visitor count...");
         try {
-            const response = await fetch('YOUR_API_URL/visitorcount'); // Replace with your actual API URL
+            const response = await fetch('https://z5ih4xazeb.execute-api.eu-north-1.amazonaws.com/prod/visitorcount'); // Replace with your actual API URL
             console.log("Response status:", response.status);
 
             if (!response.ok) {
